<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/skin_bg"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".skin.SkinActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_little"
            android:src="@drawable/weather_02" />


        <Button
            android:id="@+id/btn_change_skin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_little"
            android:background="@color/skin_btn_bg"
            android:text="@string/change_skin" />

        <Button
            android:id="@+id/btn_assets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_little"
            android:background="@color/skin_btn_bg"
            android:text="@string/change_skin_assets"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btn_sdcard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/skin_btn_bg"
            android:text="@string/change_skin_sdcard"
            android:textAllCaps="false" />

    </LinearLayout>
</layout>