<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/btn_book"
            android:layout_width="@dimen/common_btn_width"
            android:layout_height="wrap_content"
            android:text="@string/bookactivity"
            android:textAllCaps="false"
            android:background="@drawable/common_btn_bg_selector"
            skin:layout_constraintBottom_toBottomOf="parent"
            skin:layout_constraintEnd_toEndOf="parent"
            skin:layout_constraintHorizontal_bias="0.348"
            skin:layout_constraintStart_toStartOf="parent"
            skin:layout_constraintTop_toTopOf="parent"
            skin:layout_constraintVertical_bias="0.329"
            skin:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_binder_pool"
            android:layout_width="@dimen/common_btn_width"
            android:layout_height="wrap_content"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/binderpoolactivity"
            android:textAllCaps="false"
            skin:layout_constraintBottom_toBottomOf="parent"
            skin:layout_constraintEnd_toEndOf="parent"
            skin:layout_constraintHorizontal_bias="0.684"
            skin:layout_constraintStart_toStartOf="parent"
            skin:layout_constraintTop_toTopOf="parent"
            skin:layout_constraintVertical_bias="0.329" />

        <Button
            android:id="@+id/btn_skin_activity"
            android:layout_width="@dimen/common_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/skin_activity"
            android:textAllCaps="false"
            skin:layout_constraintBottom_toBottomOf="parent"
            skin:layout_constraintEnd_toEndOf="parent"
            skin:layout_constraintHorizontal_bias="0.352"
            skin:layout_constraintStart_toStartOf="parent"
            skin:layout_constraintTop_toTopOf="parent"
            skin:layout_constraintVertical_bias="0.475" />

        <Button
            android:id="@+id/btn_request_activity"
            android:layout_width="@dimen/common_btn_width"
            android:layout_height="wrap_content"
            android:background="@drawable/common_btn_bg_selector"
            android:text="@string/request_activity"
            android:textAllCaps="false"
            skin:layout_constraintBottom_toBottomOf="parent"
            skin:layout_constraintEnd_toEndOf="parent"
            skin:layout_constraintHorizontal_bias="0.684"
            skin:layout_constraintStart_toStartOf="parent"
            skin:layout_constraintTop_toTopOf="parent"
            skin:layout_constraintVertical_bias="0.475" />

        <Button
            android:id="@+id/btn_mail"
            android:layout_width="@dimen/common_btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/common_btn_bg_selector"
            android:text="Remote Debug"
            android:textAllCaps="false"
            skin:layout_constraintEnd_toEndOf="parent"
            skin:layout_constraintHorizontal_bias="0.348"
            skin:layout_constraintStart_toStartOf="parent"
            skin:layout_constraintTop_toBottomOf="@+id/btn_skin_activity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>